[gd_scene load_steps=59 format=3 uid="uid://bm524q1v51vnc"]

[ext_resource type="Texture2D" uid="uid://dty224p8se6p3" path="res://lpc_entry/png/bow/BODY_animation_edit.png" id="1_kgogk"]
[ext_resource type="Script" path="res://npc1.gd" id="1_kqh3o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1hfj"]
size = Vector2(22, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_80th4"]
atlas = ExtResource("1_kgogk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k17tm"]
atlas = ExtResource("1_kgogk")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x50d"]
atlas = ExtResource("1_kgogk")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ragj"]
atlas = ExtResource("1_kgogk")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mg74"]
atlas = ExtResource("1_kgogk")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn3k3"]
atlas = ExtResource("1_kgogk")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl7qv"]
atlas = ExtResource("1_kgogk")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3i2c"]
atlas = ExtResource("1_kgogk")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmw0d"]
atlas = ExtResource("1_kgogk")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2epmo"]
atlas = ExtResource("1_kgogk")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glub3"]
atlas = ExtResource("1_kgogk")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sca7s"]
atlas = ExtResource("1_kgogk")
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rod1r"]
atlas = ExtResource("1_kgogk")
region = Rect2(768, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr7t6"]
atlas = ExtResource("1_kgogk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2gvc"]
atlas = ExtResource("1_kgogk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0mbi"]
atlas = ExtResource("1_kgogk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ua20"]
atlas = ExtResource("1_kgogk")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00hk3"]
atlas = ExtResource("1_kgogk")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeufx"]
atlas = ExtResource("1_kgogk")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vbv7"]
atlas = ExtResource("1_kgogk")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdb15"]
atlas = ExtResource("1_kgogk")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcchk"]
atlas = ExtResource("1_kgogk")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xysyk"]
atlas = ExtResource("1_kgogk")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_77wgj"]
atlas = ExtResource("1_kgogk")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3452"]
atlas = ExtResource("1_kgogk")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugnxy"]
atlas = ExtResource("1_kgogk")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnws3"]
atlas = ExtResource("1_kgogk")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f06hr"]
atlas = ExtResource("1_kgogk")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh6gp"]
atlas = ExtResource("1_kgogk")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3mky"]
atlas = ExtResource("1_kgogk")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odaew"]
atlas = ExtResource("1_kgogk")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vko4y"]
atlas = ExtResource("1_kgogk")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_si6qc"]
atlas = ExtResource("1_kgogk")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_56rkd"]
atlas = ExtResource("1_kgogk")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c3ra"]
atlas = ExtResource("1_kgogk")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_achcm"]
atlas = ExtResource("1_kgogk")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e821r"]
atlas = ExtResource("1_kgogk")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw0lu"]
atlas = ExtResource("1_kgogk")
region = Rect2(640, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h45k"]
atlas = ExtResource("1_kgogk")
region = Rect2(704, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw7e7"]
atlas = ExtResource("1_kgogk")
region = Rect2(768, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts7uy"]
atlas = ExtResource("1_kgogk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8hdp"]
atlas = ExtResource("1_kgogk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkqvs"]
atlas = ExtResource("1_kgogk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y66ls"]
atlas = ExtResource("1_kgogk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eq85"]
atlas = ExtResource("1_kgogk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d7oq"]
atlas = ExtResource("1_kgogk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqqrf"]
atlas = ExtResource("1_kgogk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_406a4"]
atlas = ExtResource("1_kgogk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcne1"]
atlas = ExtResource("1_kgogk")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwkk3"]
atlas = ExtResource("1_kgogk")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aex5"]
atlas = ExtResource("1_kgogk")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wu6t"]
atlas = ExtResource("1_kgogk")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0sk3"]
atlas = ExtResource("1_kgogk")
region = Rect2(768, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qk4wv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80th4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k17tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x50d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ragj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mg74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn3k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl7qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3i2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmw0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2epmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glub3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sca7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rod1r")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr7t6")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2gvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0mbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ua20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00hk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeufx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vbv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdb15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcchk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xysyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77wgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3452")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugnxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnws3")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f06hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh6gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3mky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odaew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vko4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si6qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56rkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c3ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_achcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e821r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h45k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw7e7")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts7uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8hdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkqvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y66ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eq85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d7oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqqrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_406a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcne1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwkk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aex5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wu6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0sk3")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xhof5"]
radius = 58.0345

[node name="npc1" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_kqh3o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1, 6)
shape = SubResource("RectangleShape2D_a1hfj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_qk4wv")
animation = &"idle"

[node name="DialogoNpc1" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/DialogoNpc1"]
shape = SubResource("CircleShape2D_xhof5")

[connection signal="body_exited" from="CharacterBody2D/DialogoNpc1" to="CharacterBody2D" method="_on_dialogo_npc_1_body_exited"]
